--- a/assets/css/themes/mainwp-default-theme.css
+++ b/assets/css/themes/mainwp-default-theme.css
@@ -899,25 +899,24 @@ body.mainwp-ui.mainwp-custom-theme,
 
 /* Works on Firefox */
 * {
-  scrollbar-width: thin;
+  scrollbar-width: thin !important;
   scrollbar-color: var(--grey-dark-alt) rgba(255,255,255,0);
 }
 
 /* Works on Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-  width: 5px;
+  width: 5px !important;
 }
 
 *::-webkit-scrollbar-track {
-  background: var(--grey-light-alt);
+  background: transparent;
 }
 
 *::-webkit-scrollbar-thumb {
   background-color: var(--grey-dark-alt);
+  width: 5px !important;
   border-radius: 5px !important;
   -webkit-border-radius: 5px !important;
-  border: 4px solid transparent;
-  background-clip: padding-box;
 }
 
 *::-webkit-scrollbar-button {
