--- a/assets/css/mainwp-fomantic.css
+++ b/assets/css/mainwp-fomantic.css
@@ -63,6 +63,10 @@
   padding-top: 0;
 }
 
+.mainwp-ui .green.pulsating.transition {
+  box-shadow: 0 0 0 0 rgba(127, 177, 0, 0.5)
+}
+
 #mainwp-ignored-abandoned-plugins,
 #mainwp-ignored-plugins,
 #mainwp-ignored-abandoned-themes,
