--- a/assets/css/mainwp.css
+++ b/assets/css/mainwp.css
@@ -828,7 +828,11 @@ table.mainwp-manage-wpsites-table .error a {
     max-width: 65px !important;
 }
 
-.mainwp-ui #mainwp-help-modal .actions:before {
+.mainwp-ui #mainwp-help-modal > .content {
+    min-height: 640px;
+}
+
+.mainwp-ui #mainwp-help-modal > .content:before {
     position: absolute;
     display: block;
     bottom: 0;
@@ -839,7 +843,7 @@ table.mainwp-manage-wpsites-table .error a {
     rotate: 45deg;
 }
 
-.mainwp-ui #mainwp-help-modal .actions:after {
+.mainwp-ui #mainwp-help-modal > .content:after {
     position: absolute;
     display: block;
     bottom: 0;
@@ -850,11 +854,11 @@ table.mainwp-manage-wpsites-table .error a {
     rotate: 135deg;
 }
 
-.mainwp-ui #mainwp-help-modal:hover .actions:before {
+.mainwp-ui #mainwp-help-modal:hover > .content:before {
     color: #999;
 }
 
-.mainwp-ui #mainwp-help-modal:hover .actions:after {
+.mainwp-ui #mainwp-help-modal:hover .content:after {
     color: #999;
 }
 
