Fixed: popup menu postion for chrome Updated: layout

--- a/assets/css/mainwp.css
+++ b/assets/css/mainwp.css
@@ -176,7 +176,7 @@ table.mainwp-manage-updates-table tbody tr td .mainwp-update-selected-button {
 
 .mainwp-sub-header,
 .mainwp-actions-bar {
-
+    padding: 1rem;
     background: #f9fafb;
     border-bottom: 1px solid #dadada;
 }
