--- a/assets/css/mainwp.css
+++ b/assets/css/mainwp.css
@@ -205,6 +205,7 @@ table.mainwp-manage-updates-table tbody tr td .mainwp-update-selected-button {
     box-shadow: 20px 0px 15px -18px rgba(0, 0, 0, 0.15) inset;
     -webkit-box-shadow: 20px 0px 15px -18px rgba(0, 0, 0, 0.15) inset;
 	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 .mainwp-individual-site-view #mainwp-page-navigation-wrapper .mainwp-page-navigation {
