Fixed: arrow icon display for plugins/themes list

--- a/assets/css/mainwp.css
+++ b/assets/css/mainwp.css
@@ -1477,7 +1477,9 @@ th .down.icon {
     bottom: 1.25rem !important;
     left: 1.25rem !important;
 }
-
-.master-checkbox.active.title .dropdown.dropdown-trigger.icon{
+.master-checkbox.title .dropdown.dropdown-trigger.icon{
     transform: rotate(-90deg);
+}
+.master-checkbox.active.title .dropdown.dropdown-trigger.icon{
+    transform: rotate(0deg);
 }
